# CudaTest

./: CMakeLists.txt  cudaTest.cu  cudaTest.h  main.cpp
